{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 440,
  "lineage": "8bae457a-a377-c6a5-15f6-79a4f32fd84a",
  "resources": [
    {
      "module": "module.auth_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0474b5bfa31bac5a7",
            "arn": "arn:aws:ec2:eu-west-2:767398096953:instance/i-0b3d94aa69d2f2073",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b3d94aa69d2f2073",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08f5a4ad802a647a5",
            "private_dns": "ip-10-0-10-214.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a6d1e14117c7c397",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05e65415721198747",
            "tags": {
              "Name": "auth"
            },
            "tags_all": {
              "Name": "auth"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-012590a4c96354466",
              "sg-0429d656ef6ee614c",
              "sg-04bc638d7e1b4881e",
              "sg-0ac91e27c3d9f627c",
              "sg-0bc9e5c067aa39299"
            ]
          },
          "dependencies": [
            "module.auth_instance.data.aws_ami.ubuntu",
            "module.security.aws_security_group.http_traffic",
            "module.security.aws_security_group.https_traffic",
            "module.security.aws_security_group.outgoing_traffic",
            "module.security.aws_security_group.private_ssh",
            "module.security.aws_security_group.server_traffic",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.heating_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0474b5bfa31bac5a7",
            "arn": "arn:aws:ec2:eu-west-2:767398096953:instance/i-01ff558e6f26f8b05",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01ff558e6f26f8b05",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08a7d8b13a9462123",
            "private_dns": "ip-10-0-2-10.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.10",
            "public_dns": "ec2-13-41-193-158.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.41.193.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05380f90a0bd19fd3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e63eae9759aa4bdf",
            "tags": {
              "Name": "heating"
            },
            "tags_all": {
              "Name": "heating"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-012590a4c96354466",
              "sg-0429d656ef6ee614c",
              "sg-0ac91e27c3d9f627c",
              "sg-0bc9e5c067aa39299",
              "sg-0e0092d2ea8726035"
            ]
          },
          "dependencies": [
            "module.heating_instance.data.aws_ami.ubuntu",
            "module.security.aws_security_group.http_traffic",
            "module.security.aws_security_group.https_traffic",
            "module.security.aws_security_group.outgoing_traffic",
            "module.security.aws_security_group.server_traffic",
            "module.security.aws_security_group.ssh",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.lighting_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0474b5bfa31bac5a7",
            "arn": "arn:aws:ec2:eu-west-2:767398096953:instance/i-0bec8a099f88476bd",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bec8a099f88476bd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08061ee34f6076654",
            "private_dns": "ip-10-0-1-195.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.195",
            "public_dns": "ec2-18-171-242-220.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.171.242.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02e0b82c9e5cfc97b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f4a6540b5c73454b",
            "tags": {
              "Name": "lighting"
            },
            "tags_all": {
              "Name": "lighting"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-012590a4c96354466",
              "sg-0429d656ef6ee614c",
              "sg-0ac91e27c3d9f627c",
              "sg-0bc9e5c067aa39299",
              "sg-0e0092d2ea8726035"
            ]
          },
          "dependencies": [
            "module.lighting_instance.data.aws_ami.ubuntu",
            "module.security.aws_security_group.http_traffic",
            "module.security.aws_security_group.https_traffic",
            "module.security.aws_security_group.outgoing_traffic",
            "module.security.aws_security_group.server_traffic",
            "module.security.aws_security_group.ssh",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancers",
      "mode": "managed",
      "type": "aws_lb",
      "name": "private_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:loadbalancer/app/private-load-balancer/f0d8fe8f1fcae4f8",
            "arn_suffix": "app/private-load-balancer/f0d8fe8f1fcae4f8",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-private-load-balancer-629423623.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:loadbalancer/app/private-load-balancer/f0d8fe8f1fcae4f8",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "private-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-012590a4c96354466",
              "sg-0429d656ef6ee614c",
              "sg-04bc638d7e1b4881e",
              "sg-0ac91e27c3d9f627c",
              "sg-0bc9e5c067aa39299"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05e65415721198747"
              },
              {
                "subnet_id": "subnet-09ccfa6a6075a4804"
              },
              {
                "subnet_id": "subnet-0b64575a69b842199"
              }
            ],
            "subnets": [
              "subnet-05e65415721198747",
              "subnet-09ccfa6a6075a4804",
              "subnet-0b64575a69b842199"
            ],
            "vpc_id": "vpc-0ba90afd97027b9f4",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.security.aws_security_group.http_traffic",
            "module.security.aws_security_group.https_traffic",
            "module.security.aws_security_group.outgoing_traffic",
            "module.security.aws_security_group.private_ssh",
            "module.security.aws_security_group.server_traffic",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancers",
      "mode": "managed",
      "type": "aws_lb",
      "name": "public_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:loadbalancer/app/public-load-balancer/8a2f824b14ab38e0",
            "arn_suffix": "app/public-load-balancer/8a2f824b14ab38e0",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "public-load-balancer-275016482.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:loadbalancer/app/public-load-balancer/8a2f824b14ab38e0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "public-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-012590a4c96354466",
              "sg-0429d656ef6ee614c",
              "sg-0ac91e27c3d9f627c",
              "sg-0bc9e5c067aa39299",
              "sg-0e0092d2ea8726035"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00f9e4e00212d002a"
              },
              {
                "subnet_id": "subnet-0e63eae9759aa4bdf"
              },
              {
                "subnet_id": "subnet-0f4a6540b5c73454b"
              }
            ],
            "subnets": [
              "subnet-00f9e4e00212d002a",
              "subnet-0e63eae9759aa4bdf",
              "subnet-0f4a6540b5c73454b"
            ],
            "vpc_id": "vpc-0ba90afd97027b9f4",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.security.aws_security_group.http_traffic",
            "module.security.aws_security_group.https_traffic",
            "module.security.aws_security_group.outgoing_traffic",
            "module.security.aws_security_group.server_traffic",
            "module.security.aws_security_group.ssh",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancers",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "private_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:listener/app/private-load-balancer/f0d8fe8f1fcae4f8/57f224b194b56f8a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:targetgroup/auth-target-group/895079760856f324",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:listener/app/private-load-balancer/f0d8fe8f1fcae4f8/57f224b194b56f8a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:loadbalancer/app/private-load-balancer/f0d8fe8f1fcae4f8",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load-balancers.aws_lb.private_load_balancer",
            "module.load-balancers.aws_lb_target_group.auth",
            "module.security.aws_security_group.http_traffic",
            "module.security.aws_security_group.https_traffic",
            "module.security.aws_security_group.outgoing_traffic",
            "module.security.aws_security_group.private_ssh",
            "module.security.aws_security_group.server_traffic",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancers",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "public_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:listener/app/public-load-balancer/8a2f824b14ab38e0/0a82b77df3d40591",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:targetgroup/status-target-group/082384d6041723d6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:listener/app/public-load-balancer/8a2f824b14ab38e0/0a82b77df3d40591",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:loadbalancer/app/public-load-balancer/8a2f824b14ab38e0",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load-balancers.aws_lb.public_load_balancer",
            "module.load-balancers.aws_lb_target_group.status",
            "module.security.aws_security_group.http_traffic",
            "module.security.aws_security_group.https_traffic",
            "module.security.aws_security_group.outgoing_traffic",
            "module.security.aws_security_group.server_traffic",
            "module.security.aws_security_group.ssh",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancers",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "auth_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:targetgroup/auth-target-group/895079760856f324",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:listener-rule/app/private-load-balancer/f0d8fe8f1fcae4f8/57f224b194b56f8a/b8a8ea51e2ef3c79",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/auth*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:listener-rule/app/private-load-balancer/f0d8fe8f1fcae4f8/57f224b194b56f8a/b8a8ea51e2ef3c79",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:listener/app/private-load-balancer/f0d8fe8f1fcae4f8/57f224b194b56f8a",
            "priority": 20,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load-balancers.aws_lb.private_load_balancer",
            "module.load-balancers.aws_lb_listener.private_listener",
            "module.load-balancers.aws_lb_target_group.auth",
            "module.security.aws_security_group.http_traffic",
            "module.security.aws_security_group.https_traffic",
            "module.security.aws_security_group.outgoing_traffic",
            "module.security.aws_security_group.private_ssh",
            "module.security.aws_security_group.server_traffic",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancers",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "heating_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:targetgroup/heating-target-group/20bab3a8483ef885",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:listener-rule/app/public-load-balancer/8a2f824b14ab38e0/0a82b77df3d40591/4b9b798975fe7fb4",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/heating*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:listener-rule/app/public-load-balancer/8a2f824b14ab38e0/0a82b77df3d40591/4b9b798975fe7fb4",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:listener/app/public-load-balancer/8a2f824b14ab38e0/0a82b77df3d40591",
            "priority": 20,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load-balancers.aws_lb.public_load_balancer",
            "module.load-balancers.aws_lb_listener.public_listener",
            "module.load-balancers.aws_lb_target_group.heating",
            "module.load-balancers.aws_lb_target_group.status",
            "module.security.aws_security_group.http_traffic",
            "module.security.aws_security_group.https_traffic",
            "module.security.aws_security_group.outgoing_traffic",
            "module.security.aws_security_group.server_traffic",
            "module.security.aws_security_group.ssh",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancers",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "lights_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:targetgroup/lights-target-group/3e14df79ea9528ce",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:listener-rule/app/public-load-balancer/8a2f824b14ab38e0/0a82b77df3d40591/0425a4e475cc2299",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/lights*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:listener-rule/app/public-load-balancer/8a2f824b14ab38e0/0a82b77df3d40591/0425a4e475cc2299",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:listener/app/public-load-balancer/8a2f824b14ab38e0/0a82b77df3d40591",
            "priority": 10,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load-balancers.aws_lb.public_load_balancer",
            "module.load-balancers.aws_lb_listener.public_listener",
            "module.load-balancers.aws_lb_target_group.lights",
            "module.load-balancers.aws_lb_target_group.status",
            "module.security.aws_security_group.http_traffic",
            "module.security.aws_security_group.https_traffic",
            "module.security.aws_security_group.outgoing_traffic",
            "module.security.aws_security_group.server_traffic",
            "module.security.aws_security_group.ssh",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancers",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "status_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:targetgroup/status-target-group/082384d6041723d6",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:listener-rule/app/public-load-balancer/8a2f824b14ab38e0/0a82b77df3d40591/42fd46fd64c91857",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/status*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:listener-rule/app/public-load-balancer/8a2f824b14ab38e0/0a82b77df3d40591/42fd46fd64c91857",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:listener/app/public-load-balancer/8a2f824b14ab38e0/0a82b77df3d40591",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load-balancers.aws_lb.public_load_balancer",
            "module.load-balancers.aws_lb_listener.public_listener",
            "module.load-balancers.aws_lb_target_group.status",
            "module.security.aws_security_group.http_traffic",
            "module.security.aws_security_group.https_traffic",
            "module.security.aws_security_group.outgoing_traffic",
            "module.security.aws_security_group.server_traffic",
            "module.security.aws_security_group.ssh",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancers",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:targetgroup/auth-target-group/895079760856f324",
            "arn_suffix": "targetgroup/auth-target-group/895079760856f324",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 20,
                "matcher": "200",
                "path": "/api/auth",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:targetgroup/auth-target-group/895079760856f324",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:767398096953:loadbalancer/app/private-load-balancer/f0d8fe8f1fcae4f8"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "auth-target-group",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ba90afd97027b9f4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancers",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "heating",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:targetgroup/heating-target-group/20bab3a8483ef885",
            "arn_suffix": "targetgroup/heating-target-group/20bab3a8483ef885",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 20,
                "matcher": "200",
                "path": "/api/heating",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:targetgroup/heating-target-group/20bab3a8483ef885",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:767398096953:loadbalancer/app/public-load-balancer/8a2f824b14ab38e0"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "heating-target-group",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ba90afd97027b9f4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancers",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lights",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:targetgroup/lights-target-group/3e14df79ea9528ce",
            "arn_suffix": "targetgroup/lights-target-group/3e14df79ea9528ce",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 20,
                "matcher": "200",
                "path": "/api/lights/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:targetgroup/lights-target-group/3e14df79ea9528ce",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:767398096953:loadbalancer/app/public-load-balancer/8a2f824b14ab38e0"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lights-target-group",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ba90afd97027b9f4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancers",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "status",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:targetgroup/status-target-group/082384d6041723d6",
            "arn_suffix": "targetgroup/status-target-group/082384d6041723d6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 20,
                "matcher": "200",
                "path": "/api/status/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:targetgroup/status-target-group/082384d6041723d6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:767398096953:loadbalancer/app/public-load-balancer/8a2f824b14ab38e0"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "status-target-group",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ba90afd97027b9f4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancers",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "auth_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:targetgroup/auth-target-group/895079760856f324-20240308140222050600000011",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:targetgroup/auth-target-group/895079760856f324",
            "target_id": "i-0b3d94aa69d2f2073"
          },
          "dependencies": [
            "module.auth_instance.aws_instance.instance",
            "module.auth_instance.data.aws_ami.ubuntu",
            "module.load-balancers.aws_lb_target_group.auth",
            "module.security.aws_security_group.http_traffic",
            "module.security.aws_security_group.https_traffic",
            "module.security.aws_security_group.outgoing_traffic",
            "module.security.aws_security_group.private_ssh",
            "module.security.aws_security_group.server_traffic",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancers",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "heating_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:targetgroup/heating-target-group/20bab3a8483ef885-20240308140225648200000013",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:targetgroup/heating-target-group/20bab3a8483ef885",
            "target_id": "i-01ff558e6f26f8b05"
          },
          "dependencies": [
            "module.heating_instance.aws_instance.instance",
            "module.heating_instance.data.aws_ami.ubuntu",
            "module.load-balancers.aws_lb_target_group.heating",
            "module.security.aws_security_group.http_traffic",
            "module.security.aws_security_group.https_traffic",
            "module.security.aws_security_group.outgoing_traffic",
            "module.security.aws_security_group.server_traffic",
            "module.security.aws_security_group.ssh",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancers",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lights_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:targetgroup/lights-target-group/3e14df79ea9528ce-20240308140248928600000017",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:targetgroup/lights-target-group/3e14df79ea9528ce",
            "target_id": "i-0bec8a099f88476bd"
          },
          "dependencies": [
            "module.lighting_instance.aws_instance.instance",
            "module.lighting_instance.data.aws_ami.ubuntu",
            "module.load-balancers.aws_lb_target_group.lights",
            "module.security.aws_security_group.http_traffic",
            "module.security.aws_security_group.https_traffic",
            "module.security.aws_security_group.outgoing_traffic",
            "module.security.aws_security_group.server_traffic",
            "module.security.aws_security_group.ssh",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancers",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "status_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:targetgroup/status-target-group/082384d6041723d6-20240308140225553900000012",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:767398096953:targetgroup/status-target-group/082384d6041723d6",
            "target_id": "i-0bdd88781ca651d80"
          },
          "dependencies": [
            "module.load-balancers.aws_lb_target_group.status",
            "module.security.aws_security_group.http_traffic",
            "module.security.aws_security_group.https_traffic",
            "module.security.aws_security_group.outgoing_traffic",
            "module.security.aws_security_group.server_traffic",
            "module.security.aws_security_group.ssh",
            "module.status_instance.aws_instance.instance",
            "module.status_instance.data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:security-group/sg-012590a4c96354466",
            "description": "Security group for incoming http traffic",
            "egress": [],
            "id": "sg-012590a4c96354466",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": " allowing all incoming http traffic from any ipv4",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": " allowing all incoming http traffic from any ipv6",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http_traffic",
            "name_prefix": "",
            "owner_id": "767398096953",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ba90afd97027b9f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "https_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:security-group/sg-0bc9e5c067aa39299",
            "description": "Security group for incoming https traffic",
            "egress": [],
            "id": "sg-0bc9e5c067aa39299",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": " allowing all incoming https traffic from any ipv4",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": " allowing all incoming https traffic from any ipv6",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "https_traffic",
            "name_prefix": "",
            "owner_id": "767398096953",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ba90afd97027b9f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "outgoing_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:security-group/sg-0ac91e27c3d9f627c",
            "description": "Security group for outgoing traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allowing all outgoing traffic to any ipv6",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "allowing all outgoing traffic to any ipv4",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac91e27c3d9f627c",
            "ingress": [],
            "name": "outgoing_traffic",
            "name_prefix": "",
            "owner_id": "767398096953",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ba90afd97027b9f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:security-group/sg-04bc638d7e1b4881e",
            "description": "Security group for incoming ssh on a private instance",
            "egress": [],
            "id": "sg-04bc638d7e1b4881e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allows ssh incoming from any ip",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private_ssh",
            "name_prefix": "",
            "owner_id": "767398096953",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ba90afd97027b9f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:security-group/sg-0429d656ef6ee614c",
            "description": "Security group for incoming http traffic",
            "egress": [],
            "id": "sg-0429d656ef6ee614c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": " allowing all incoming traffic from any ipv4 on port 3000",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": " allowing all incoming traffic from any ipv6 on port 3000",
                "from_port": 3000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "server_traffic",
            "name_prefix": "",
            "owner_id": "767398096953",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ba90afd97027b9f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:security-group/sg-0e0092d2ea8726035",
            "description": "Security group for incoming ssh",
            "egress": [],
            "id": "sg-0e0092d2ea8726035",
            "ingress": [
              {
                "cidr_blocks": [
                  "82.38.115.17/32"
                ],
                "description": "allows ssh incoming only from the machine this code is executed on",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh",
            "name_prefix": "",
            "owner_id": "767398096953",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ba90afd97027b9f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "outgoing_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:security-group-rule/sgr-0c927995d6b3282fb",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "allowing all outgoing traffic to any ipv6",
            "from_port": null,
            "id": "sgr-0c927995d6b3282fb",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ac91e27c3d9f627c",
            "security_group_rule_id": "sgr-0c927995d6b3282fb",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.outgoing_traffic",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "outgoing_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:security-group-rule/sgr-0e172c7cd78b2aded",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "allowing all outgoing traffic to any ipv4",
            "from_port": null,
            "id": "sgr-0e172c7cd78b2aded",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ac91e27c3d9f627c",
            "security_group_rule_id": "sgr-0e172c7cd78b2aded",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.outgoing_traffic",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:security-group-rule/sgr-0485f0aa96b3d1569",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": " allowing all incoming http traffic from any ipv4",
            "from_port": 80,
            "id": "sgr-0485f0aa96b3d1569",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-012590a4c96354466",
            "security_group_rule_id": "sgr-0485f0aa96b3d1569",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.http_traffic",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http_ipv4_3000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:security-group-rule/sgr-0543d774960fdc2e5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": " allowing all incoming traffic from any ipv4 on port 3000",
            "from_port": 3000,
            "id": "sgr-0543d774960fdc2e5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0429d656ef6ee614c",
            "security_group_rule_id": "sgr-0543d774960fdc2e5",
            "tags": null,
            "tags_all": {},
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.server_traffic",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:security-group-rule/sgr-032946e8df6be8dbf",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": " allowing all incoming http traffic from any ipv6",
            "from_port": 80,
            "id": "sgr-032946e8df6be8dbf",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-012590a4c96354466",
            "security_group_rule_id": "sgr-032946e8df6be8dbf",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.http_traffic",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http_ipv6_3000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:security-group-rule/sgr-0a901045c37f6e70d",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": " allowing all incoming traffic from any ipv6 on port 3000",
            "from_port": 3000,
            "id": "sgr-0a901045c37f6e70d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0429d656ef6ee614c",
            "security_group_rule_id": "sgr-0a901045c37f6e70d",
            "tags": null,
            "tags_all": {},
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.server_traffic",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:security-group-rule/sgr-0ed35ccd6b3907c07",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": " allowing all incoming https traffic from any ipv4",
            "from_port": 443,
            "id": "sgr-0ed35ccd6b3907c07",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0bc9e5c067aa39299",
            "security_group_rule_id": "sgr-0ed35ccd6b3907c07",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.https_traffic",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:security-group-rule/sgr-063ed29d67666c265",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": " allowing all incoming https traffic from any ipv6",
            "from_port": 443,
            "id": "sgr-063ed29d67666c265",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0bc9e5c067aa39299",
            "security_group_rule_id": "sgr-063ed29d67666c265",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.https_traffic",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:security-group-rule/sgr-0b15aae85321772fe",
            "cidr_ipv4": "82.38.115.17/32",
            "cidr_ipv6": null,
            "description": "allows ssh incoming only from the machine this code is executed on",
            "from_port": 22,
            "id": "sgr-0b15aae85321772fe",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e0092d2ea8726035",
            "security_group_rule_id": "sgr-0b15aae85321772fe",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.ssh",
            "module.security.data.http.myipaddr",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:security-group-rule/sgr-0ca3d13ee06f97667",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "allows ssh incoming from any ip",
            "from_port": 22,
            "id": "sgr-0ca3d13ee06f97667",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04bc638d7e1b4881e",
            "security_group_rule_id": "sgr-0ca3d13ee06f97667",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.private_ssh",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.status_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0474b5bfa31bac5a7",
            "arn": "arn:aws:ec2:eu-west-2:767398096953:instance/i-0bdd88781ca651d80",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bdd88781ca651d80",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0351e1ee201283431",
            "private_dns": "ip-10-0-3-151.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.151",
            "public_dns": "ec2-18-132-209-72.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.132.209.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05f960e1084ca3cf7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00f9e4e00212d002a",
            "tags": {
              "Name": "status"
            },
            "tags_all": {
              "Name": "status"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-012590a4c96354466",
              "sg-0429d656ef6ee614c",
              "sg-0ac91e27c3d9f627c",
              "sg-0bc9e5c067aa39299",
              "sg-0e0092d2ea8726035"
            ]
          },
          "dependencies": [
            "module.security.aws_security_group.http_traffic",
            "module.security.aws_security_group.https_traffic",
            "module.security.aws_security_group.outgoing_traffic",
            "module.security.aws_security_group.server_traffic",
            "module.security.aws_security_group.ssh",
            "module.status_instance.data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-061413f4bad9781ef",
            "association_id": "eipassoc-0e31494b8985655e7",
            "domain": "vpc",
            "id": "eipalloc-061413f4bad9781ef",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0f46c8948b6604057",
            "private_dns": "ip-10-0-1-186.eu-west-2.compute.internal",
            "private_ip": "10.0.1.186",
            "public_dns": "ec2-52-56-157-192.eu-west-2.compute.amazonaws.com",
            "public_ip": "52.56.157.192",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:internet-gateway/igw-07214f1af3766c2ec",
            "id": "igw-07214f1af3766c2ec",
            "owner_id": "767398096953",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "microservices-igw"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "microservices-igw"
            },
            "vpc_id": "vpc-0ba90afd97027b9f4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-061413f4bad9781ef",
            "association_id": "eipassoc-0e31494b8985655e7",
            "connectivity_type": "public",
            "id": "nat-0e8114ce1076fd3a5",
            "network_interface_id": "eni-0f46c8948b6604057",
            "private_ip": "10.0.1.186",
            "public_ip": "52.56.157.192",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f4a6540b5c73454b",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "NAT gw"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "NAT gw"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0243e166fbe33ec241080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e8114ce1076fd3a5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0243e166fbe33ec24",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.NAT",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07214f1af3766c2ec",
            "id": "r-rtb-04995f1b336532bed1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04995f1b336532bed",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:route-table/rtb-0243e166fbe33ec24",
            "id": "rtb-0243e166fbe33ec24",
            "owner_id": "767398096953",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e8114ce1076fd3a5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "microservices-private-route-table"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "microservices-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba90afd97027b9f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:route-table/rtb-04995f1b336532bed",
            "id": "rtb-04995f1b336532bed",
            "owner_id": "767398096953",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07214f1af3766c2ec",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "microservices-public-route-table"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "microservices-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba90afd97027b9f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f4943fd329d8329",
            "route_table_id": "rtb-0243e166fbe33ec24",
            "subnet_id": "subnet-05e65415721198747"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c495b1459afd63ae",
            "route_table_id": "rtb-0243e166fbe33ec24",
            "subnet_id": "subnet-0b64575a69b842199"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6b0da70077b17a8",
            "route_table_id": "rtb-0243e166fbe33ec24",
            "subnet_id": "subnet-09ccfa6a6075a4804"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03317565b2490f419",
            "route_table_id": "rtb-04995f1b336532bed",
            "subnet_id": "subnet-0f4a6540b5c73454b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2efbe444f07ad12",
            "route_table_id": "rtb-04995f1b336532bed",
            "subnet_id": "subnet-0e63eae9759aa4bdf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be0102ae5c954a3b",
            "route_table_id": "rtb-04995f1b336532bed",
            "subnet_id": "subnet-00f9e4e00212d002a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:subnet/subnet-05e65415721198747",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e65415721198747",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398096953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "microservices-private-subnet-eu-west-2a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "microservices-private-subnet-eu-west-2a"
            },
            "vpc_id": "vpc-0ba90afd97027b9f4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:subnet/subnet-0b64575a69b842199",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b64575a69b842199",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398096953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "microservices-private-subnet-eu-west-2b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "microservices-private-subnet-eu-west-2b"
            },
            "vpc_id": "vpc-0ba90afd97027b9f4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:subnet/subnet-09ccfa6a6075a4804",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ccfa6a6075a4804",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398096953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "microservices-private-subnet-eu-west-2c"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "microservices-private-subnet-eu-west-2c"
            },
            "vpc_id": "vpc-0ba90afd97027b9f4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:subnet/subnet-0f4a6540b5c73454b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4a6540b5c73454b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767398096953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "microservices-public-subnet-eu-west-2a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "microservices-public-subnet-eu-west-2a"
            },
            "vpc_id": "vpc-0ba90afd97027b9f4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:subnet/subnet-0e63eae9759aa4bdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e63eae9759aa4bdf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767398096953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "microservices-public-subnet-eu-west-2b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "microservices-public-subnet-eu-west-2b"
            },
            "vpc_id": "vpc-0ba90afd97027b9f4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:subnet/subnet-00f9e4e00212d002a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f9e4e00212d002a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767398096953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "microservices-public-subnet-eu-west-2c"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "microservices-public-subnet-eu-west-2c"
            },
            "vpc_id": "vpc-0ba90afd97027b9f4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767398096953:vpc/vpc-0ba90afd97027b9f4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-093748fb3eecd2314",
            "default_route_table_id": "rtb-0b65f1b5954767cd0",
            "default_security_group_id": "sg-09580d3b112b74b85",
            "dhcp_options_id": "dopt-0920cfa0cfa60a5ec",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ba90afd97027b9f4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b65f1b5954767cd0",
            "owner_id": "767398096953",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "microservices"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "microservices"
            }
          }
        }
      ]
    }
  ]
}